--- a/1_03.html
+++ b/1_03.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>First page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="site.css">
 </head>
 <body>
+
 <hr class="border border-primary border-3 opacity-75">
 
 <form>
@@ -30,14 +32,22 @@
             <input type="button" value="Отправить">
             <button type="button" class="btn btn-primary">text</button>
         </div>
+
     </div>
 
 
 </form>
 
-<a href="2_03.html" target="_blank">Next page</a>
-
 <hr class="border border-primary border-3 opacity-75">
+
+<div class="btn-group">
+    <a href="1_03.html" class="btn btn-primary active" aria-current="page">
+        Первая страница
+    </a>
+    <a href="2_03.html" class="btn btn-primary">
+        Вторая страница
+    </a>
+</div>
 
 </body>
 </html>
